--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -99,8 +99,8 @@
         <div class="api hotpepper-bana">
           <a href="http://webservice.recruit.co.jp/"><img src="http://webservice.recruit.co.jp/banner/hotpepper-m.gif" alt="ホットペッパー Webサービス" width="88" height="35" border="0" title="ホットペッパー Webサービス"></a>
         </div>
+<div class="clear"></div>
       </div>
-
 
 
       <div class="footer">
