--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -85,7 +85,7 @@
       </div>
 
       <p class="api-message">
-        すきまっぷでは、以下のAPIを利用しています。
+        おなかすきまっぷでは、以下のAPIを利用しています。
       </p>
 
       <div class="apis">
