文言変えた

--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/sukimap/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/sukimap/image/og.png"/>
 
-    <meta name="description" content="おなかすきまっぷは、おなかのすき具合と今いる場所をTwitterやFacebookで共有できるサービスです。近くにいる友達にご飯にさそってもらいましょう。">
+    <meta name="description" content="おなかすきまっぷは、ともだちにご飯にさそってもらうサービスです。おなかのすき具合と今いる場所をTwitterやFacebookで共有できます。近くにいる友達にご飯にさそってもらいましょう。">
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/sukimap/" />
 
@@ -65,9 +65,9 @@
         <div class="message">
           おなかすきまっぷとは…
           <br/>
-          おなかすいていることを友達に伝えるサービスです。
+          ともだちにご飯にさそってもらうサービスです。
           <br/>
-          おなかすき具合と場所を友達に共有しましょう。
+          おなかすき具合と場所を友達に共有できます。
         </div>
 
         <div class="line">
