--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -8,6 +8,8 @@
     <meta property="og:title" content="bon3 (盆のTシャツ販売サイト)"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/image/ogp.png"/>
+    <meta name="viewport" content="width=1040px, user-scalable=no">
+
     <link rel="shortcut icon" href="/bon3/image/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
@@ -28,6 +30,7 @@
     </script>
   </head>
   <body>
+    <div id="tap-to-start">タップでスタート</div>
     <canvas>
     </canvas>
     <div id="footer">
