--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -10,6 +10,10 @@
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/image/ogp.png"/>
     <meta name="viewport" content="width=1040px, user-scalable=no">
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no" />
+    <link rel="apple-touch-icon-precomposed" href="/bon3/image/home-icon.png"/>
+
     <link rel="shortcut icon" href="/bon3/image/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
