--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -108,32 +108,8 @@
             <img src="http://htn.to/motemen"/>
           </a>
         </div>
-      </section>
-
-      <section class="gallaries clear">
-        <h2>gallaries</h2>
-        <div class="photo-item">
-          <a href="">
-            <img src="http://htn.to/motemen"/>
-          </a>
-        </div>
-        <div class="photo-item">
-          <a href="">
-            <img src="http://htn.to/motemen"/>
-          </a>
-        </div>
-        <div class="photo-item">
-          <a href="">
-            <img src="http://htn.to/motemen"/>
-          </a>
-        </div>
-        <div class="photo-item">
-          <a href="">
-            <img src="http://htn.to/motemen"/>
-          </a>
-        </div>
-        <div>
-          <a href="">show more</a>.
+        <div class="more">
+          <a href="https://twitter.com/search?q=gifboom&src=typd" target="_blank">show more</a>
         </div>
       </section>
 
