--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -14,45 +14,35 @@
     <h2>Samples</h2>
 
     <div class="sample-item">
-      <img src="http://dl.dropbox.com/u/8270034/g/f41b6355efab039ea655b8961772090d.png"/>
-      <h3>唐紅</h3>
+      <img src="http://distilleryimage3.s3.amazonaws.com/952b18765d4c11e2a77722000a1fbc49_7.jpg"/>
+      <h3>薄萌葱（Usu-moegi）</h3>
       <p>
-        Kara-Kurenai is japanese red. You can see Kara Kurenai at Heian Jingu Shrine.
-        <br/>
-        <a href="http://www.heianjingu.or.jp/index_e.html">Heian Jingu Shrine</a>
+        Arashiyama Bamboo Forest
+        <br>
+        Arashiyama is a district on the western outskirts of Kyoto. You can find a Usu-moegi color in the bamboo tunnel here.
+        <br>
       </p>
     </div>
 
     <div class="sample-item">
-      <img src="http://dl.dropbox.com/u/8270034/g/f41b6355efab039ea655b8961772090d.png"/>
-      <h3>唐紅</h3>
+      <img src="http://distilleryimage2.s3.amazonaws.com/3c7651145d4c11e2adac22000a1fbe03_7.jpg"/>
+      <h3>櫨染（Hajizome）</h3>
       <p>
-        Kara-Kurenai is japanese red. You can see Kara Kurenai at Heian Jingu Shrine.
+        Kinkakuji (Golden Pavilion)
         <br/>
-        <a href="http://www.heianjingu.or.jp/index_e.html">Heian Jingu Shrine</a>
+        Hajizome is a color which means a power. Ashikaga Yoshimitsu (the 3rd shogun of the Ashikaga shogunate who ruled from 1368 to 1394 during the Muromachi period) built Kinkakuji. Its top two floors are completely covered in gold leaf.
       </p>
     </div>
 
     <div class="sample-item">
-      <img src="http://dl.dropbox.com/u/8270034/g/f41b6355efab039ea655b8961772090d.png"/>
-      <h3>唐紅</h3>
+      <img src="http://distilleryimage1.s3.amazonaws.com/1d0800c05d4c11e2aa3022000a9e2931_7.jpg"/>
+      <h3>月白（Geppaku）</h3>
       <p>
-        Kara-Kurenai is japanese red. You can see Kara Kurenai at Heian Jingu Shrine.
-        <br/>
-        <a href="http://www.heianjingu.or.jp/index_e.html">Heian Jingu Shrine</a>
+        Arashiyama Bamboo Forest
+        <br>
+        Arashiyama is a district on the western outskirts of Kyoto. You can find a Usu-moegi color in the bamboo tunnel here.
       </p>
     </div>
-
-    <div class="sample-item">
-      <img src="http://dl.dropbox.com/u/8270034/g/f41b6355efab039ea655b8961772090d.png"/>
-      <h3>唐紅</h3>
-      <p>
-        Kara-Kurenai is japanese red. You can see Kara Kurenai at Heian Jingu Shrine.
-        <br/>
-        <a href="http://www.heianjingu.or.jp/index_e.html">Heian Jingu Shrine</a>
-      </p>
-    </div>
-
 
   </body>
 </html>
