--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -15,32 +15,49 @@
 
     <div class="sample-item">
       <img src="http://distilleryimage3.s3.amazonaws.com/952b18765d4c11e2a77722000a1fbc49_7.jpg"/>
-      <h3>薄萌葱（Usu-moegi）</h3>
+      <!-- 薄萌葱 -Usumoeg- -->
+      <h3>Arashiyama Bamboo Forest</h3>
       <p>
-        Arashiyama Bamboo Forest
-        <br>
-        Arashiyama is a district on the western outskirts of Kyoto. You can find a Usu-moegi color in the bamboo tunnel here.
-        <br>
+        Arashiyama is a district on the western outskirts of Kyoto. You can find a Usumoegi color in the bamboo tunnel here.
+      </p>
+      <h3>嵐山 竹林</h3>
+      <p>
+        市西部にある嵯峨嵐山は渡月橋や天龍寺を中心とした京都の代表的な観光地であり、桜や紅葉の時期には全国から人が訪れる。なかでも薄萌葱の竹林にそった散歩道は清涼感にあふれ人気のスポットとなっている。
+      </p>
+      <p>
+        <a href="http://www.arashiyama-navi.info/">http://www.arashiyama-navi.info/</a>
       </p>
     </div>
 
     <div class="sample-item">
       <img src="http://distilleryimage2.s3.amazonaws.com/3c7651145d4c11e2adac22000a1fbe03_7.jpg"/>
-      <h3>櫨染（Hajizome）</h3>
+      <!-- 櫨染 -Hajizome- -->
+      <h3>Kinkakuji</h3>
       <p>
-        Kinkakuji (Golden Pavilion)
-        <br/>
         Hajizome is a color which means a power. Ashikaga Yoshimitsu (the 3rd shogun of the Ashikaga shogunate who ruled from 1368 to 1394 during the Muromachi period) built Kinkakuji. Its top two floors are completely covered in gold leaf.
+      </p>
+      <h3>金閣 (舎利殿)</h3>
+      <p>
+        金箔を三層に重ねて押された建物は正確には舎利殿という名称で、北西部の鹿苑寺に位置する。櫨染の色が権威を表すようにこの金閣は、室町幕府三代将軍であった足利義満が建造した。
+      </p>
+      <p>
+        <a href="http://www.shokoku-ji.jp/k_about.html">http://www.shokoku-ji.jp/k_about.html</a>
       </p>
     </div>
 
     <div class="sample-item">
       <img src="http://distilleryimage1.s3.amazonaws.com/1d0800c05d4c11e2aa3022000a9e2931_7.jpg"/>
-      <h3>月白（Geppaku）</h3>
+      <!-- 月白 -Geppaku- -->
+      <h3>Ryoanji rock garden</h3>
       <p>
-        Arashiyama Bamboo Forest
-        <br>
-        Arashiyama is a district on the western outskirts of Kyoto. You can find a Usu-moegi color in the bamboo tunnel here.
+        Ryōanji is a Zen temple located in northwest Kyoto. The rock garden (kare-sansui) is one of the finest garden of Zen, in Japan. And you can find a color Sakuranezu in the dry garden.
+      </p>
+      <h3>龍安寺 石庭</h3>
+      <p>
+        桜鼠色は京都市北部に位置する龍安寺で見られる。石庭には15の石が配置され、一部が他の石に隠れてしまうので、どちらから見ても全ての石を一度に見渡すことは出来ないと言われる。
+      </p>
+      <p>
+        <a href="http://www.ryoanji.jp/top.html">http://www.ryoanji.jp/top.html</a>
       </p>
     </div>
 
