--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -90,22 +90,17 @@
         <h2>Samples</h2>
         <div class="photo-item">
           <a href="">
-            <img src="http://htn.to/motemen"/>
+            <img src="http://distilleryimage3.s3.amazonaws.com/952b18765d4c11e2a77722000a1fbc49_7.jpg"/>
           </a>
         </div>
         <div class="photo-item">
           <a href="">
-            <img src="http://htn.to/motemen"/>
+            <img src="http://distilleryimage2.s3.amazonaws.com/3c7651145d4c11e2adac22000a1fbe03_7.jpg"/>
           </a>
         </div>
         <div class="photo-item">
           <a href="">
-            <img src="http://htn.to/motemen"/>
-          </a>
-        </div>
-        <div class="photo-item">
-          <a href="">
-            <img src="http://htn.to/motemen"/>
+            <img src="http://distilleryimage1.s3.amazonaws.com/1d0800c05d4c11e2aa3022000a9e2931_7.jpg"/>
           </a>
         </div>
         <div class="more">
