--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -14,7 +14,7 @@
     <h2>Samples</h2>
 
     <div class="sample-item">
-      <img src="http://distilleryimage3.s3.amazonaws.com/952b18765d4c11e2a77722000a1fbc49_7.jpg"/>
+      <img src="usumoegi.png"/>
       <!-- 薄萌葱 -Usumoeg- -->
       <h3>Arashiyama Bamboo Forest</h3>
       <p>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="sample-item">
-      <img src="http://distilleryimage2.s3.amazonaws.com/3c7651145d4c11e2adac22000a1fbe03_7.jpg"/>
+      <img src="hajizome.png"/>
       <!-- 櫨染 -Hajizome- -->
       <h3>Kinkakuji</h3>
       <p>
@@ -46,8 +46,7 @@
     </div>
 
     <div class="sample-item">
-      <img src="http://distilleryimage1.s3.amazonaws.com/1d0800c05d4c11e2aa3022000a9e2931_7.jpg"/>
-      <!-- 月白 -Geppaku- -->
+      <img src="sakuranezu.png"/>
       <h3>Ryoanji rock garden</h3>
       <p>
         Ryōanji is a Zen temple located in northwest Kyoto. The rock garden (kare-sansui) is one of the finest garden of Zen, in Japan. And you can find a color Sakuranezu in the dry garden.
