--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -6,6 +6,8 @@
 
     <meta name="format-detection" content="telephone=no" />
 
+    <meta name="viewport" content="width=700px">
+
     <link rel="shortcut icon" href="/kyotocamera/image/favicon.ico">
     <meta property="og:title" content="Kyoto Camera"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kyotocamera/"/>
@@ -30,6 +32,10 @@
       })();
     </script>
 
+    <script language="javascript" type="text/javascript" defer src="jquery-1.8.3.min.js"></script>
+    <script language="javascript" type="text/javascript" defer src="jquery.colorbox-min.js"></script>
+    <script language="javascript" type="text/javascript" defer src="kyotocamera.js"></script>
+
   </head>
   <body id="index-page">
 
@@ -46,7 +52,7 @@
 
       <section class="row-fluid">
         <div class="span12">
-          <div class="span6">
+          <div class="span7">
             <div class="title">
               <h1>
                 <img class="logo" src="http://htn.to/motemen"/>
@@ -77,7 +83,7 @@
             </div>
           </div>
 
-          <div class="span6 screen-shot">
+          <div class="span5 screen-shot">
             <div class="iphone">
               <img class="base" src="http://ninjinkun.github.com/feedback/img/iphone@2x.png"/>
               <img class="display" src="http://htn.to/motemen"/>
@@ -89,17 +95,17 @@
       <section class="samples clear">
         <h2>Samples</h2>
         <div class="photo-item">
-          <a href="">
+          <a href="usumoegi.png">
             <img src="usumoegi.png"/>
           </a>
         </div>
         <div class="photo-item">
-          <a href="">
+          <a href="hajizome.png">
             <img src="hajizome.png"/>
           </a>
         </div>
         <div class="photo-item">
-          <a href="">
+          <a href="sakuranezu.png">
             <img src="sakuranezu.png"/>
           </a>
         </div>
