--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -55,39 +55,35 @@
           <div class="span7">
             <div class="title">
               <h1>
-                <img class="logo" src="http://htn.to/motemen"/>
-                Kyoto Camera
+                <img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/f0c1312/images/public/logo.png"/>
               </h1>
             </div>
 
-            <div class="description offset1">
+            <div class="description">
               <p>
-                Kyoto Camera is a cool application.
+                It's a fast, beautiful and fun way to share your photos with friends and family.
                 <br/>
-                You can make a cool picture.
+                Snap a picture, choose a filter to transform its look and feel, then post to Instagram. Share to Facebook, Twitter, and Tumblr too – it's as easy as pie. It's photo sharing, reinvented.
                 <br/>
-                Kyoto Camera give you japanese traditional colors.
+                Oh yeah, did we mention it’s free?
               </p>
 
               <p>
-                京都カメラはかっこいいアプリケーションです．
+                すばやく、美しく、楽しく、写真を通じて友人と日常を共有するツールです。
                 <br/>
-                このアプリでかっこいい写真を作れます．
+                写真を撮影、フィルタで加工して、Instagramに投稿しましょう。 Facebook、Twitter、Tumblrでシェアすることも可能です。楽しく簡単に写真をシェアできます。
                 <br/>
-                普通の写真を撮ると，それに日本の伝統色を並べて表示しちゃいます．
+                Instagramは無料でご利用いただけます。
               </p>
             </div>
 
-            <div class="download-container offset1">
+            <div class="download-container">
               <img class="download" src="http://ninjinkun.github.com/feedback/img/App_Store_Badge.svg"/>
             </div>
           </div>
 
           <div class="span5 screen-shot">
-            <div class="iphone">
-              <img class="base" src="http://ninjinkun.github.com/feedback/img/iphone@2x.png"/>
-              <img class="display" src="http://htn.to/motemen"/>
-            </div>
+            <img src="http://images.apple.com/jp/iphone/design/images/hero_front.jpg" style="width:280px;"/>
           </div>
         </div>
       </section>
@@ -115,7 +111,7 @@
       </section>
 
       <section>
-        <div class="download-container offset3">
+        <div class="download-container">
           <img class="download" src="http://ninjinkun.github.com/feedback/img/App_Store_Badge.svg"/>
         </div>
       </section>
