--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -36,6 +36,10 @@
     <script language="javascript" type="text/javascript" defer src="jquery.colorbox-min.js"></script>
     <script language="javascript" type="text/javascript" defer src="kyotocamera.js"></script>
 
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+    <script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
+    <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+
   </head>
   <body id="index-page">
 
@@ -61,24 +65,24 @@
 
             <div class="description">
               <p>
-                It's a fast, beautiful and fun way to share your photos with friends and family.
+                Now more than 400 traditional colors of Japan are in your hand.
                 <br/>
-                Snap a picture, choose a filter to transform its look and feel, then post to Instagram. Share to Facebook, Twitter, and Tumblr too – it's as easy as pie. It's photo sharing, reinvented.
-                <br/>
-                Oh yeah, did we mention it’s free?
+                Just take a photo, Kyoto is near you always!
               </p>
 
-              <p>
-                すばやく、美しく、楽しく、写真を通じて友人と日常を共有するツールです。
+              <p style="font-size: 90%">
+                あなたの感じた京都を友達にシェアしませんか？
                 <br/>
-                写真を撮影、フィルタで加工して、Instagramに投稿しましょう。 Facebook、Twitter、Tumblrでシェアすることも可能です。楽しく簡単に写真をシェアできます。
+                写真を撮るだけで簡単に日本の伝統色が分かります。
                 <br/>
-                Instagramは無料でご利用いただけます。
+                伝統色は400種類以上。
               </p>
             </div>
 
             <div class="download-container">
               <img class="download" src="http://ninjinkun.github.com/feedback/img/App_Store_Badge.svg"/>
+              <br/>
+              MADE IN KYOTO
             </div>
           </div>
 
@@ -110,15 +114,14 @@
         </div>
       </section>
 
-      <section>
-        <div class="download-container">
-          <img class="download" src="http://ninjinkun.github.com/feedback/img/App_Store_Badge.svg"/>
-        </div>
-      </section>
-
       <section class="footer">
-        <div class="fb-container">
-          <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kyotocamera/" data-send="false" data-width="310" data-show-faces="true"></div>
+
+        <div class="social-buttons">
+          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/kyotocamera/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+          <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kyotocamera/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+          <g:plusone size="medium" href="http://higashi-dance-network.appspot.com/kyotocamera/"></g:plusone>
         </div>
 
         <div id="copyright">
