--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kyotocamera/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/kyotocamera/image/og.png"/>
 
-    <meta name="description" content="Kyoto Camera is a great application for human.">
+    <meta name="description" content="Now more than 400 traditional colors of Japan are in your hand. Just take a photo, Kyoto is near you always!">
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kyotocamera/" />
 
@@ -125,7 +125,7 @@
         </div>
 
         <div id="copyright">
-          <a href="/">(C) 2012 東ダンスネットワーク</a>
+          <a href="/">(C) 2012 Higashi Dance Network</a>
         </div>
       </section>
 
