--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -11,7 +11,7 @@
   </head>
   <body id="guide-page">
 
-    <h2>Samples</h2>
+    <h2>Guide</h2>
 
     <div class="sample-item">
       <img src="usumoegi.png"/>
