--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -56,7 +56,7 @@
         桜鼠色は京都市北部に位置する龍安寺で見られる。石庭には15の石が配置され、一部が他の石に隠れてしまうので、どちらから見ても全ての石を一度に見渡すことは出来ないと言われる。
       </p>
       <p>
-        <a href="http://www.ryoanji.jp/top.html">http://www.ryoanji.jp/top.html</a>
+        <a href="http://www.ryoanji.jp/smph/top.html">http://www.ryoanji.jp/smph/top.html</a>
       </p>
     </div>
 
