--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -142,6 +142,8 @@
           </div>
 
           <div id="widget-container">
+            <a class="twitter-timeline" href="https://twitter.com/search?q=%23%E9%87%8D%E3%81%AD%E7%9D%80" data-widget-id="302684212698415106">#重ね着 に関するツイート</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
 
         </div>
