update top page

--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kyoto Camera</title>
+    <title>Kyoto Camera - 京都らしい伝統色を発見する新感覚カメラアプリ</title>
 
     <meta name="format-detection" content="telephone=no" />
 
     <meta name="viewport" content="width=700px">
 
-    <link rel="shortcut icon" href="/kyotocamera/image/favicon.ico">
-    <meta property="og:title" content="Kyoto Camera"/>
+    <link rel="shortcut icon" href="/kyotocamera/icon16.ico">
+    <meta property="og:title" content="Kyoto Camera - 京都らしい伝統色を発見する新感覚カメラアプリ"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kyotocamera/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/kyotocamera/image/og.png"/>
 
-    <meta name="description" content="Now more than 400 traditional colors of Japan are in your hand. Just take a photo, Kyoto is near you always!">
+    <meta name="description" content="Kyoto Cameraは京都らしい伝統色を発見する新感覚カメラアプリ。レンズを向けるだけで伝統色が見つかります。あなたの身近な京都を探してみませんか。">
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kyotocamera/" />
 
@@ -53,80 +53,111 @@
       }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="kyotocamera-container" class="container">
-
-      <section class="row-fluid">
-        <div class="span12">
-          <div class="span7">
-            <div class="title">
-              <h1>
-                <img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/f0c1312/images/public/logo.png"/>
-              </h1>
+      <div class="row offset1 header">
+        <div class="span2">
+          <a href="/kyotocamera/">
+            <img id="icon" src="icon1024.png">
+          </a>
+        </div>
+        <div class="span7 right">
+          <h1>
+            <a href="/kyotocamera/">
+              <img id="logo" src="logo.png" title="Kyoto Camera"/>
+            </a>
+          </h1>
+          <div class="lead">
+            京都らしい伝統色を発見する新感覚カメラアプリ
+          </div>
+        </div>
+      </div>
+      <div class="row main">
+        <div class="span5 screenshot-container">
+          <img src="screenshot.png" class="screenshot"/>
+        </div>
+        <div class="span7 features">
+          <div class="row feature">
+            <div class="span2 image-container">
+              <img src="torii.svg" class="feature-image" />
             </div>
-
-            <div class="description">
+            <div class="span5 feature-text">
+              <h2>伝統色を探して撮影</h2>
               <p>
-                Now more than 400 traditional colors of Japan are in your hand.
-                <br/>
-                Just take a photo, Kyoto is near you always!
-              </p>
-
-              <p style="font-size: 90%">
-                あなたの感じた京都を友達にシェアしませんか？
-                <br/>
-                写真を撮るだけで簡単に日本の伝統色が分かります。
-                <br/>
-                伝統色は400種類以上。
+                レンズを向けるだけで伝統色が見つかります。あなたの身近な京都を探してみませんか。
               </p>
             </div>
-
-            <div class="download-container">
-              <img class="download" src="http://ninjinkun.github.com/feedback/img/App_Store_Badge.svg"/>
+          </div>
+          <div class="row feature">
+            <div class="span2 image-container">
+              <img src="colors.svg" class="feature-image" />
+            </div>
+            <div class="span5 feature-text">
+              <h2>400種類以上の伝統色</h2>
+              <p>
+                伝統色は400種類以上。<br>
+                使うたび、いつも新しい色に出会うことができます。
+              </p>
             </div>
           </div>
-
-          <div class="span5 screen-shot">
-            <img src="http://images.apple.com/jp/iphone/design/images/hero_front.jpg" style="width:280px;"/>
+          <div class="row feature">
+            <div class="span2 image-container">
+              <img src="twitter.svg" class="feature-image" />
+            </div>
+            <div class="span5 feature-text">
+              <h2>ともだちに共有</h2>
+              <p>
+                撮った写真はTwitterにシェアできます。見つけた伝統色をともだちと楽しもう。
+              </p>
+            </div>
           </div>
         </div>
-      </section>
-
-      <section class="samples clear">
-        <h2>Samples</h2>
-        <div class="photo-item">
-          <a href="usumoegi.png">
-            <img src="usumoegi.png"/>
+      </div>
+    </div>
+    <div class="samples-container">
+    <div class="container">
+      <div class="samples row">
+        <div class="span4 photo-item">
+          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211324.jpg">
+            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211324.jpg"/>
           </a>
         </div>
-        <div class="photo-item">
-          <a href="hajizome.png">
-            <img src="hajizome.png"/>
+        <div class="span4 photo-item">
+          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130224/20130224194027.jpg">
+            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130224/20130224194027.jpg"/>
           </a>
         </div>
-        <div class="photo-item">
-          <a href="sakuranezu.png">
-            <img src="sakuranezu.png"/>
+        <div class="span4 photo-item">
+          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211314.jpg">
+            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211314.jpg"/>
           </a>
         </div>
-        <div class="more">
-          <a href="https://twitter.com/search?q=gifboom&src=typd" target="_blank">show more</a>
-        </div>
-      </section>
-
-      <section class="footer">
-
-        <div class="social-buttons">
-          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/kyotocamera/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
-          <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kyotocamera/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
-          <g:plusone size="medium" href="http://higashi-dance-network.appspot.com/kyotocamera/"></g:plusone>
-        </div>
-
-        <div id="copyright">
-          <a href="/">(C) 2013 Higashi Dance Network</a>
-        </div>
-      </section>
-
+      </div>
+    </div>
+    </div>
+    <div class="container">
+      <div class="download row">
+        <span class="offset2 span5">
+          <a href="javascript:alert('coming soon')">
+            <img src="available.svg" class="available"/>
+          </a>
+        </span>
+        <span class="span4 price">
+          iOS 5以降対応
+          <br/>
+          &yen;85 ($0.99)
+          <br/>
+          Comming Soon
+        </span>
+      </div>
+      <div class="social-buttons">
+        <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/kyotocamera/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+        <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kyotocamera/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+        <g:plusone size="medium" href="http://higashi-dance-network.appspot.com/kyotocamera/"></g:plusone>
+        <span class="copyright">
+          &copy; 2013 <a href="/">東ダンスネットワーク</a>
+        </span>
+      </div>
     </div>
   </body>
 </html>
