--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,15 @@
           </div>
         </div>
 
+        <div class="item" style="left: 300px; top: 700px;">
+          <div>
+            <a href="/sukimap/"><img src="/kyotocamera/og.png" title="KyotoCamera"/></a>
+          </div>
+          <div class="title">
+            KyotoCamera
+          </div>
+        </div>
+
       </div> <!-- items end -->
 
     </div> <!-- wrapper end -->
