--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -72,7 +72,10 @@
       </div>
       <div class="row main">
         <div class="span5 screenshot-container">
-          <img src="screenshot.png" class="screenshot"/>
+          <div class="screenshot">
+            <img src="iphone_frame.png" class="iphone-frame"/>
+            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130302/20130302151217.gif" class="screencast"/>
+          </div>
         </div>
         <div class="span7 features">
           <div class="row feature">
@@ -136,7 +139,7 @@
     <div class="container">
       <div class="download row">
         <span class="offset2 span5">
-          <a href="javascript:alert('coming soon')">
+          <a href="https://itunes.apple.com/jp/app/kyotocamera-ri-benno-chuan/id606858270">
             <img src="available.svg" class="available"/>
           </a>
         </span>
@@ -144,8 +147,6 @@
           iOS 5以降対応
           <br/>
           &yen;85 ($0.99)
-          <br/>
-          Comming Soon
         </span>
       </div>
       <div class="social-buttons">
