update guide page

--- a/public/kyotocamera/guide.html
+++ b/public/kyotocamera/guide.html
@@ -25,7 +25,7 @@
     <h2>Guide</h2>
 
     <div class="sample-item">
-      <img src="usumoegi.png"/>
+      <img src="usumoegi.jpg"/>
       <!-- 薄萌葱 -Usumoeg- -->
       <h3>Arashiyama Bamboo Forest</h3>
       <p>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="sample-item">
-      <img src="hajizome.png"/>
+      <img src="hajizome.jpg"/>
       <!-- 櫨染 -Hajizome- -->
       <h3>Kinkakuji</h3>
       <p>
@@ -57,7 +57,7 @@
     </div>
 
     <div class="sample-item">
-      <img src="sakuranezu.png"/>
+      <img src="sakuranezu.jpg"/>
       <h3>Ryoanji rock garden</h3>
       <p>
         Ryōanji is a Zen temple located in northwest Kyoto. The rock garden (kare-sansui) is one of the finest garden of Zen, in Japan. And you can find a color Sakuranezu in the dry garden.
