update index page

--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -53,36 +53,33 @@
       }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="kyotocamera-container" class="container">
-      <div class="row offset1 header">
-        <div class="span2">
+      <div class="row offset1-5 header">
+        <div class="span2 no-padding-left">
           <a href="/kyotocamera/">
-            <img id="icon" src="icon1024.png">
+            <img id="icon" src="service-icon.png">
           </a>
         </div>
-        <div class="span7 right">
+        <div class="span7 right no-padding-left">
           <h1>
             <a href="/kyotocamera/">
-              <img id="logo" src="logo.png" title="Kyoto Camera"/>
+              <img id="logo" src="service-logo.png" title="Kyoto Camera"/>
             </a>
           </h1>
-          <div class="lead">
-            京都らしい伝統色を発見する新感覚カメラアプリ
-          </div>
         </div>
       </div>
-      <div class="row main">
-        <div class="span5 screenshot-container">
+      <div class="row main offset1-5">
+        <div class="span3-5 screenshot-container no-padding-left">
           <div class="screenshot">
             <img src="iphone_frame.png" class="iphone-frame"/>
             <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130302/20130302151217.gif" class="screencast"/>
           </div>
         </div>
-        <div class="span7 features">
+        <div class="span6 features">
           <div class="row feature">
-            <div class="span2 image-container">
+            <div class="span1-5 image-container">
               <img src="torii.svg" class="feature-image" />
             </div>
-            <div class="span5 feature-text">
+            <div class="span4 feature-text">
               <h2>伝統色を探して撮影</h2>
               <p>
                 レンズを向けるだけで伝統色が見つかります。あなたの身近な京都を探してみませんか。
@@ -90,10 +87,10 @@
             </div>
           </div>
           <div class="row feature">
-            <div class="span2 image-container">
+            <div class="span1-5 image-container">
               <img src="colors.svg" class="feature-image" />
             </div>
-            <div class="span5 feature-text">
+            <div class="span3-5 feature-text">
               <h2>400種類以上の伝統色</h2>
               <p>
                 伝統色は400種類以上。<br>
@@ -102,10 +99,10 @@
             </div>
           </div>
           <div class="row feature">
-            <div class="span2 image-container">
+            <div class="span1-5 image-container">
               <img src="twitter.svg" class="feature-image" />
             </div>
-            <div class="span5 feature-text">
+            <div class="span3-5 feature-text">
               <h2>ともだちに共有</h2>
               <p>
                 撮った写真はTwitterにシェアできます。見つけた伝統色をともだちと楽しもう。
@@ -117,20 +114,20 @@
     </div>
     <div class="samples-container">
     <div class="container">
-      <div class="samples row">
-        <div class="span4 photo-item">
-          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211324.jpg">
-            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211324.jpg"/>
+      <div class="samples row offset0-5">
+        <div class="span3-5 photo-item">
+          <a href="hajizome.jpg">
+            <img src="hajizome.jpg"/>
           </a>
         </div>
-        <div class="span4 photo-item">
-          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130224/20130224194027.jpg">
-            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130224/20130224194027.jpg"/>
+        <div class="span3-5 photo-item">
+          <a href="sakuranezu.jpg">
+            <img src="sakuranezu.jpg"/>
           </a>
         </div>
-        <div class="span4 photo-item">
-          <a href="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211314.jpg">
-            <img src="http://cdn-ak.f.st-hatena.com/images/fotolife/h/hitode909/20130222/20130222211314.jpg"/>
+        <div class="span3-5 photo-item">
+          <a href="benihi">
+            <img src="benihi.jpg"/>
           </a>
         </div>
       </div>
@@ -138,7 +135,7 @@
     </div>
     <div class="container">
       <div class="download row">
-        <span class="offset2 span5">
+        <span class="offset3 span3">
           <a href="https://itunes.apple.com/jp/app/kyotocamera-ri-benno-chuan/id606858270">
             <img src="available.svg" class="available"/>
           </a>
