--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -126,7 +126,7 @@
           </a>
         </div>
         <div class="span3-5 photo-item">
-          <a href="benihi">
+          <a href="benihi.jpg">
             <img src="benihi.jpg"/>
           </a>
         </div>
