--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="/kyotocamera/icon16.ico">
     <meta property="og:title" content="Kyoto Camera - 京都らしい伝統色を発見する新感覚カメラアプリ"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kyotocamera/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/kyotocamera/image/og.png"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/kyotocamera/og.png"/>
 
     <meta name="description" content="Kyoto Cameraは京都らしい伝統色を発見する新感覚カメラアプリ。レンズを向けるだけで伝統色が見つかります。あなたの身近な京都を探してみませんか。">
 
