--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
 
         <div class="item" style="left: 300px; top: 700px;">
           <div>
-            <a href="/sukimap/"><img src="/kyotocamera/og.png" title="KyotoCamera"/></a>
+            <a href="/kyotocamera/"><img src="/kyotocamera/og.png" title="KyotoCamera"/></a>
           </div>
           <div class="title">
             KyotoCamera
