--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -143,7 +143,7 @@
         <span class="span4 price">
           iOS 5以降対応
           <br/>
-          &yen;85 ($0.99)
+          &yen;85
         </span>
       </div>
       <div class="social-buttons">
