--- a/public/kyotocamera/index.html
+++ b/public/kyotocamera/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html
+   data-english-title="Kyoto Camera - A novel camera application for discovering traditional Kyoto colors."
+   >
   <head>
     <meta charset="utf-8">
     <title>Kyoto Camera - 京都らしい伝統色を発見する新感覚カメラアプリ</title>
 
     <meta name="format-detection" content="telephone=no" />
 
-    <meta name="viewport" content="width=700px">
+    <meta name="viewport" content="width=960px">
 
     <link rel="shortcut icon" href="/kyotocamera/icon16.ico">
     <meta property="og:title" content="Kyoto Camera - 京都らしい伝統色を発見する新感覚カメラアプリ"/>
@@ -65,6 +67,7 @@
               <img id="logo" src="service-logo.png" title="Kyoto Camera"/>
             </a>
           </h1>
+          <small data-english="A novel camera application for discovering traditional Kyoto colors."></small>
         </div>
       </div>
       <div class="row main offset1-5">
@@ -80,8 +83,8 @@
               <img src="torii.svg" class="feature-image" />
             </div>
             <div class="span4 feature-text">
-              <h2>伝統色を探して撮影</h2>
-              <p>
+              <h2 data-english="Search for and shoot traditional colors">伝統色を探して撮影</h2>
+              <p data-english="Just point your lens to find traditional colors. Why not try searching for the Kyoto around you?">
                 レンズを向けるだけで伝統色が見つかります。あなたの身近な京都を探してみませんか。
               </p>
             </div>
@@ -91,8 +94,8 @@
               <img src="colors.svg" class="feature-image" />
             </div>
             <div class="span3-5 feature-text">
-              <h2>400種類以上の伝統色</h2>
-              <p>
+              <h2 data-english="Over 400 kinds of traditional color">400種類以上の伝統色</h2>
+              <p data-english="With over 400 kinds of traditional color, you can find a new one every time you use the app.">
                 伝統色は400種類以上。<br>
                 使うたび、いつも新しい色に出会うことができます。
               </p>
@@ -103,8 +106,8 @@
               <img src="twitter.svg" class="feature-image" />
             </div>
             <div class="span3-5 feature-text">
-              <h2>ともだちに共有</h2>
-              <p>
+              <h2 data-english="Share with friends">ともだちに共有</h2>
+              <p data-english="You can share your photos on Twitter from the app. Try sharing the traditional colors you find with your friends.">
                 撮った写真はTwitterにシェアできます。見つけた伝統色をともだちと楽しもう。
               </p>
             </div>
@@ -141,9 +144,12 @@
           </a>
         </span>
         <span class="span4 price">
-          iOS 5以降対応
-          <br/>
-          &yen;85 ($0.99)
+          <p data-english="Requires iOS5 or later">
+            iOS 5以降対応
+          </p>
+          <p data-english="$0.99">
+            &yen;85 ($0.99)
+          </p>
         </span>
       </div>
       <div class="social-buttons">
@@ -153,7 +159,7 @@
         <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kyotocamera/" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
         <g:plusone size="medium" href="http://higashi-dance-network.appspot.com/kyotocamera/"></g:plusone>
         <span class="copyright">
-          &copy; 2013 <a href="/">東ダンスネットワーク</a>
+          &copy; 2013 <a href="/" data-english="Higashi Dance Network">東ダンスネットワーク</a>
         </span>
       </div>
     </div>
