--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,9 @@
   </head>
   <body>
     <div id="wrapper">
+      <img src="/logo.png" style="width: 100%; height: 100%; position: absolute; left: 0px; top: 0px; z-index: 0"/>
 
-      <div class="items">
+      <div class="items" style="z-index: 10">
         <div class="item title" style="left: 100px; top: 100px;">
           東
         </div>
