--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -166,16 +166,19 @@
           </a>
         </div>
 
+        <p class="sorry">
+          <strong>お知らせ 2014年9月</strong><br/>
+          しばらくの間，重ね着を表示できない不具合がありました．ご迷惑をおかけしました．復旧にあたって，週間重ね着機能を提供できなくなりました．利用者の皆様にはご迷惑をおかけします．
+        </p>
+
         <p class="api-message">
           今日の重ね着では、以下のAPIを利用しています。
         </p>
 
         <div class="apis">
           <div class="api">
-            <a href="http://tenkiapi.jp/" class="tenki-logo">
-              <img src="images/tenki_logo.gif">
-              <br/>
-              WEB services by tenkiapi.jp
+            <a href="http://weather.livedoor.com/weather_hacks/">
+              Weather Hacks
             </a>
           </div>
 
@@ -189,6 +192,20 @@
           <div class="api">
             <a href="http://www.docodoco.jp/">
               <img src="images/docodoco_logo.gif">
+            </a>
+          </div>
+        </div>
+
+        <p class="api-message">
+          今日の重ね着では、以下のAPIを利用していました。
+        </p>
+
+        <div class="apis">
+          <div class="api">
+            <a href="http://tenkiapi.jp/" class="tenki-logo">
+              <img src="images/tenki_logo.gif">
+              <br/>
+              WEB services by tenkiapi.jp
             </a>
           </div>
         </div>
